# SVD-project

./: CMakeLists.txt  Iterative_refinement.h  README.md
.github/workflows/: cmake-multi-platform.yml
src/: GolubKahanSVD.cpp  Iterative_refinement.h  dqds.h  generate_svd.cpp  generate_svd.h  iterative_refinement.cpp  iterative_refinement.h  jacobi.cpp  jacobi.h  testing.cpp
src/slepc/: Makefile  slepc_example.c  slepc_installation_guide.md
src/slepc/algo_reviews/: Cross.md  Lanczos bidiagonalization with explicit restart.md  ksvd.md  scalapack.md  svdlapack.md
theory/in_work/bidiagonal svd/: Cингулряные_значения_бидиагональной_матрицы_методом_бисекции.docx  SVD.docx  Бидиагонализация+Голуб_Кохан_с_шагом_.docx  Высокая_относительная_точность.docx  Вычисления_сингулярных_значений_и_сингулярных_векторов_бидиагональной.docx  Косвенный метод вычисления SVD.docx
theory/in_work/iterative refinement/: Алгоритм_быстрого_итеративного_уточнения_разложения_матрицы.docx  О границах применимости iterative refinement.docx  О_границах_применимости_iterative_refinement.docx  Обновление_SVD_с_помощью_μ_вращений.docx  Ускорение_итеративного_уточнения_2_ой_раздел.docx
theory/in_work/jacobi/: JTS.docx  gpu_jacobi.docx
